<resources>
    <string name="app_name">vk_cup_2</string>
    <string name="stars_response_text">Оцените просмотренный материал</string>
    <string name="rate_button_text">Оценить</string>
    <string name="answer_button_text">Проверить</string>
    <string name="rating_star">rating star</string>
    <string name="thanks_for_answer">Спасибо за ответ!</string>
    <string name="option_1">1</string>
    <string name="option_2">2</string>
    <string name="option_3">3</string>
    <string name="option_4">4</string>
    <string name="check">check</string>
    <string name="first_question_title">Первый вопрос</string>
    <string name="first_question">Вопрос 1/1</string>
    <string name="fill_blanks_text_element_1">One</string>
    <string name="fill_blanks_text_element_2">three</string>
    <string name="fill_blanks_text_element_3">five.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_view_for_connection_lines">image view for connection lines</string>
    <string name="option_a">A</string>
    <string name="option_b">B</string>
    <string name="option_c">C</string>
    <string name="drag_and_drop_text_element_1">One</string>
    <string name="drag_and_drop_text_element_2">three</string>
    <string name="drag_and_drop_text_element_3">five.</string>
    <string name="connect_elements_text">Соедините элементы</string>
    <string name="fill_blanks_text">Заполните пропуски:</string>
    <string name="drag_and_drop_text">Заполните пропуски, перетащив соответствующие элементы:</string>
</resources>