<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectElementsFragment">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_view_for_connection_lines" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/connect_elements_text"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/left_element_1"
                    style="@style/ConnectElementsTextView"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_shape"
                    android:text="@string/option_1" />

                <TextView
                    android:id="@+id/left_element_2"
                    style="@style/ConnectElementsTextView"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_shape"
                    android:text="@string/option_2" />

                <TextView
                    android:id="@+id/left_element_3"
                    style="@style/ConnectElementsTextView"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_shape"
                    android:text="@string/option_3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/right_element_1"
                    style="@style/ConnectElementsTextView"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_shape"
                    android:text="@string/option_a" />

                <TextView
                    android:id="@+id/right_element_2"
                    style="@style/ConnectElementsTextView"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_shape"
                    android:text="@string/option_b" />

                <TextView
                    android:id="@+id/right_element_3"
                    style="@style/ConnectElementsTextView"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_shape"
                    android:text="@string/option_c" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/answer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/answer_button_text"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="invisible"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</RelativeLayout>