<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".StarsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/stars_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stars_response_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/stars_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <LinearLayout
        android:id="@+id/stars_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stars_text_view">

        <ImageButton
            android:id="@+id/star1_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_inactive_star_rate_24"
            android:contentDescription="@string/rating_star" />

        <ImageButton
            android:id="@+id/star2_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_inactive_star_rate_24"
            android:contentDescription="@string/rating_star" />

        <ImageButton
            android:id="@+id/star3_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_inactive_star_rate_24"
            android:contentDescription="@string/rating_star" />

        <ImageButton
            android:id="@+id/star4_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_inactive_star_rate_24"
            android:contentDescription="@string/rating_star" />

        <ImageButton
            android:id="@+id/star5_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_inactive_star_rate_24"
            android:contentDescription="@string/rating_star" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/rate_button_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>